tests/snapshots/preview__quick_card_binary.snap
---
source: tests/preview.rs
expression: text
---
┌ /snap/pictures ──────────────────────┐┌ other panel: ~/other ────────────────┐
│Name                  Size Modified   ││blob.bin                              │
│ ..                   <UP>            ││kind     regular file                 │
│ blob.bin                9 09-24 14:13││size     9 bytes                      │
│ new\nline\x1b.txt      42 09-22 14:13││modified 2026-09-24 14:13:20          │
│ notes.txt              80 09-23 14:13││mode     -rw-r--r--                   │
│ quad.png             1234 09-21 14:13││binary file                           │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└ 4 entries ───────────────────────────┘└ quick view ──────────────────────────┘
/snap/pictures$                                                                 
F1Help  F2      F3View  F4Edit  F5Copy  F6Move  F7Mkdir F8Trash F9      F10Quit
