tests/snapshots/preview__quick_card_text_head.snap
---
source: tests/preview.rs
expression: text
---
┌ /snap/pictures ──────────────────────┐┌ other panel: ~/other ────────────────┐
│Name                  Size Modified   ││notes.txt                             │
│ ..                   <UP>            ││kind     regular file                 │
│ blob.bin                9 09-24 14:13││size     80 bytes                     │
│ new\nline\x1b.txt      42 09-22 14:13││modified 2026-09-23 14:13:20          │
│ notes.txt              80 09-23 14:13││mode     -rw-r--r--                   │
│ quad.png             1234 09-21 14:13││owner    1000                         │
│                                      ││                                      │
│                                      ││first line                            │
│                                      ││        indented\x1b[31m red\x07      │
│                                      ││bad \xff byte                         │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└ 4 entries ───────────────────────────┘└ quick view ──────────────────────────┘
/snap/pictures$                                                                 
F1Help  F2      F3View  F4Edit  F5Copy  F6Move  F7Mkdir F8Trash F9      F10Quit
