tests/snapshots/preview__quick_halfblocks.snap
---
source: tests/preview.rs
expression: text
---
┌ /snap/pictures ──────────────────────┐┌ other panel: ~/other ────────────────┐
│Name                  Size Modified   ││           ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀           │
│ ..                   <UP>            ││           ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀           │
│ blob.bin                9 09-24 14:13││           ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀           │
│ new\nline\x1b.txt      42 09-22 14:13││           ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀           │
│ notes.txt              80 09-23 14:13││           ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀           │
│ quad.png             1234 09-21 14:13││           ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀           │
│                                      ││           ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀           │
│                                      ││           ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀           │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└ 4 entries ───────────────────────────┘└ quad.png 16 x 16 px ─────────────────┘
/snap/pictures$                                                                 
F1Help  F2      F3View  F4Edit  F5Copy  F6Move  F7Mkdir F8Trash F9      F10Quit
